syntax = "proto3";

package opebtree;

import "ope_btree.proto";

service DbRpc {
    // Represents one Get operation with multiple round trip between client and server.
    rpc Get (stream GetCallbackReply) returns (stream GetCallback);

    // Represents one Put operation with multiple round trip between client and server.
    rpc Put (stream PutCallbackReply) returns (stream PutCallback);
}

